--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div id="imgFondo" class="img">
                     <img src="img/logo-sena-verde.png" alt="image1" loading="lazy">                </div>
                 <article id="texto" class="texto">
-                    <h2>Activity: My Daily Rutine</h2>
-                    <p>Apprentice: <br> <br> Francisco José Huertas Mejía <br> <br> <br> <br> Course: <br> <br> English Does Work - Level 1 <br> <br> <br> Instructor: <br> <br> Claudia De Lemos</p>
+                    <h2>My Daily Rutine AA1 - EV03</h2>
+                    <p>Apprentice: <br> <br> Francisco José Huertas Mejía <br> <br> <br> <br> Course: <br> <br> English Does Work Level 1 - 2924639 <br> <br> <br> Instructor: <br> <br> Claudia De Lemos</p>
                 </article>
             </div>
         
